==> KoalbyMQP/Urchin-Framework/Urchin_Firmware/src/Herkulex.cpp <==
#include "../src/Herkulex.h"
#include "../src/coms.h"
#include "freertos/FreeRTOS.h"
#include "../src/MSGQueue.h"
#include <string>
#include <cmath>
#define HSerial1     1 		// Write in Serial 1 port Arduino Mega - Pin 19(rx) - 18 (tx)
#define HSerial2     2   	// Write in Serial 2 port Arduino Mega - Pin 17(rx) - 16 (tx)
#define HSerial3     3   	// Write in Serial 3 port Arduino Mega - Pin 15(rx) - 14 (tx)
#define Serial      4   	// Write in SoftSerial Arduino with 328p or Mega

void HerkulexClass::begin(uart_port_t uart_num,long baud, int rx, int tx){

	init_uart(uart_num,baud,233,tx,rx);

	port = uart_num;
}

void HerkulexClass::moveSpeedOne(int servoID, int targSpeed, int totalTime, JogLedColor valueLed, HerkulexModel model)
{
	// if (targSpeed > 1023 || targSpeed < -1023) return;              // speed (goal) non correct
	// if ((pTime <0) || (pTime > 2856)) return;
  
	int GoalSpeedSign;
	if (targSpeed < 0) {
	  GoalSpeedSign = (-1)* targSpeed ;
	  GoalSpeedSign |= 0x4000;  //bit number 14 
	} 
	else {
	  GoalSpeedSign = targSpeed;
	}
	int LSB=GoalSpeedSign & 0X00FF; 		       // MSB speedGoal 
	int MSB=(GoalSpeedSign & 0xFF00) >> 8;      // LSB speedGoal 

	const bool Mode = true;
    const int maxTick = 254;
    int timeRemaining = totalTime;
	timeRemaining = min(int((float)totalTime /11.2), 255);

    // Read the starting tick count from motor RAM (Tick address is usually 52)
    // uint8_t startTick = RAMRead(servoID, Tick);	
    // unsigned long startMillis = millis(); // for backup timing

    while (timeRemaining > 0) {
        int thisTick = min(timeRemaining, maxTick);  // Limit each jog to maxTick
        sendSJog(servoID, targSpeed, thisTick, valueLed, model, Mode, LSB, MSB);

        // Wait for 'thisTick' duration using RAM Tick
        uint8_t tickStart = RAMRead(servoID, Tick);
        while (true) {
            uint8_t currentTick = RAMRead(servoID, Tick);
            int tickDelta = (int)currentTick - (int)tickStart;

            if (tickDelta < 0) tickDelta += 256;  // Handle wraparound
            if (tickDelta >= thisTick) break;

            delay(5); // small delay to reduce read spam
        }

        timeRemaining -= thisTick;
		 PrintfToPI(DebugQueue,"%d",timeRemaining);
    }

    // Total time reached; stop motor
    motor_stop(servoID);
	int rawPos = RAMRead(servoID, AbsolutePosition);
	float currentAngle = 0.0;
	float degreesPerUnit = 1.0;
	float center = 0.0;

	switch (model) {
		case MODEL_0601:
			center = 1024;
			degreesPerUnit = 0.161;
			break;
		case MODEL_0602:
			center = 16384;
			degreesPerUnit = 0.011;
			break;
		case MODEL_0101:
		case MODEL_0201:
			center = 512;
			degreesPerUnit = 0.325;
			break;
	}

	currentAngle = (rawPos - center) * degreesPerUnit;

	// Find nearest multiple of 5
	float snappedAngle = round(currentAngle / 5.0) * 5.0;

	// Move back to the snapped angle
	moveOneAngle(servoID, snappedAngle, 2000,  valueLed, model, false);
}

void HerkulexClass::moveOne(int servoID, int targPosition, int pTime, JogLedColor valueLed, HerkulexModel model)
{
  // command-specific checks
  int posLimit = 0;

  switch (model) {
	case MODEL_0601:
		posLimit = 2047;
		break;
	case MODEL_0602:
		posLimit = 32767;
		break;
	case MODEL_0101:
	case MODEL_0201:
		posLimit = 1023;
		break;
}
  if (targPosition > posLimit || targPosition < 0) {
	 PrintfToPI(DebugQueue,"HerkulexLib: moveOne: Error targPosition out of range");
    return;              // speed (goal) non correct
  }
  if ((pTime < 0) || (pTime > 2856)) {
	 PrintfToPI(DebugQueue,"HerkulexLib: moveOne: Error playTime out of range");
	return;
  }
  int LSB=targPosition & 0X00FF;								// MSB Pos
  int MSB=(targPosition & 0XFF00) >> 8;						// LSB Pos

  bool Mode = false;

//   int SetValue = (1<<valueLed);	//assign led value 

  playTime=int((float)pTime/11.2);			// 8. Execution time

  sendSJog(servoID, targPosition, pTime, valueLed, model, Mode, LSB, MSB);
}

void HerkulexClass::moveAll(int servoID, int Goal, JogLedColor valueLed, HerkulexModel model)
{

	// int center = 0;
    // float degreesPerUnit = 0.0;
    int posLimit = 0;

    switch (model) {
        case MODEL_0601:
            // center = 1024;
            // degreesPerUnit = 0.161;
            posLimit = 2047;
            break;
        case MODEL_0602:
            // center = 16384;
            // degreesPerUnit = 0.011;
            posLimit = 32767;
            break;
        case MODEL_0101:
        case MODEL_0201:
            // center = 512;
            // degreesPerUnit = 0.325;
            posLimit = 1023;
            break;
    }
	if (Goal > posLimit || Goal < 0) {
		PrintfToPI(DebugQueue,"HerkulexLib: moveOne: Error targPosition out of range");
		return;              // speed (goal) non correct
	  }

	  int SetValue = (1<<valueLed);
	  int posLSB=Goal & 0X00FF;					// MSB Pos
	  int posMSB=(Goal & 0XFF00) >> 8;			// LSB Pos

	  addData(posLSB, posMSB, SetValue, servoID);	//add servo data to list, pos mode
}

void HerkulexClass::moveSpeedAll(int servoID, int Goal, JogLedColor valueLed, HerkulexModel model)
{
	  if (Goal > 1023 || Goal < -1023)
		return;								 //-1023 <--> 1023 range
	  int Mode = 1; //Speed Mode is always 1 bit shifted extra in set value, position mode shift by 0
	  int SetValue = (1<<Mode) | (1<<valueLed);
	//   int iMode=1;                  		// mode=continous rotation
	//   int iStop=0;                  		// Stop=0

	  // Speed definition
	  int GoalSpeedSign;
	  if (Goal < 0) {
		GoalSpeedSign = (-1)* Goal ;
		GoalSpeedSign |= 0x4000;  //bit n�14 
	  } 
	  else {
		GoalSpeedSign = Goal;
	  }

	  int speedGoalLSB=GoalSpeedSign & 0X00FF; 	      		 // MSB speedGoal 
	  int speedGoalMSB=(GoalSpeedSign & 0xFF00) >> 8;        // LSB speedGoal 

	  addData(speedGoalLSB, speedGoalMSB, SetValue, servoID);		//add servo data to list, speed mode
}

void HerkulexClass::sendData(byte* buffer, int lenght){

	// clearBuffer(); 		//clear the serialport buffer - try to do it!
	(void) uart_write_bytes(port, buffer, lenght);
        // switch (port)
		// {
		// 	// case Serial:
		// 	// 	SwSerial.write(buffer, lenght);
		// 	// 	delay(1);
		// 	// 	break;
		// 	case UART_NUM_0:
		// 		delay(1);
		// 		break;
		// 	case UART_NUM_1:
		// 		delay(1);
		// 		break;
		// 	case UART_NUM_2:
		// 		delay(1);
		// 		break;
		// 	case UART_NUM_MAX:
		// 		delay(1);
		// 		break;
		// 	#if defined (__AVR_ATmega1280__) || defined (__AVR_ATmega128__) || defined (__AVR_ATmega2560__)
		// 	case HSerial1:
		// 		Serial1.write(buffer, lenght);
		// 		delay(1);
		// 		break;
		// 	case HSerial2:
		// 		Serial2.write(buffer, lenght);
		// 		delay(1);
		// 		break;
		// 	case HSerial3:
		// 		Serial3.write(buffer, lenght);
		// 		delay(1);
		// 		break;
		// 	#endif
		// }
}

int HerkulexClass::readData(int size)
{
	int i = 0;
	byte* bpt = &dataEx[9];
	(void) uart_read_bytes(port, bpt, size, pdMS_TO_TICKS(10));
    // int beginsave=0;
    // int Time_Counter=0;
    // switch (port)
	// {
	// // case Serial:

    // //     while((SwSerial.available() < size) & (Time_Counter < TIME_OUT)){
    // //     		Time_Counter++;
    // //     		delayMicroseconds(1000);  //wait 1 millisecond for 10 times
	// // 	}
        	
	// // 	while (SwSerial.available() > 0){
	// // 		byte inchar = (byte)SwSerial.read();
	// // 		if ( (inchar == 0xFF) & ((byte)SwSerial.peek() == 0xFF) ){
	// // 				beginsave=1; 
	// // 				i=0; 				 // if found new header, begin again
	// // 		}
	// // 		if (beginsave==1 && i<size) {
	// // 			   dataEx[i] = inchar;
	// // 			   i++;
	// // 		}
	// // 	}
	// // 	SwSerial.flush();
	// // 	break;
	// case UART_NUM_0:
	// 			delay(1);
	// 			break;
	// 		case UART_NUM_1:
	// 			delay(1);
	// 			break;
	// 		case UART_NUM_2:
	// 			delay(1);
	// 			break;
	// 		case UART_NUM_MAX:
	// 			delay(1);
	// 			break;
	
	// #if defined (__AVR_ATmega1280__) || defined (__AVR_ATmega128__) || defined (__AVR_ATmega2560__)
	// case HSerial1:
	// 	while((Serial1.available() < size) & (Time_Counter < TIME_OUT)){
    //     		Time_Counter++;
    //     		delayMicroseconds(1000);
	// 	}      	
	// 	while (Serial1.available() > 0){
    //   		byte inchar = (byte)Serial1.read();
	// 		//printHexByte(inchar);
    //     	if ( (inchar == 0xFF) & ((byte)Serial1.peek() == 0xFF) ){
	// 					beginsave=1;
	// 					i=0; 						
    //          }
    //         if (beginsave==1 && i<size) {
    //                    dataEx[i] = inchar;
    //                    i++;
	// 		}
	// 	}
	// 	break;
	
	// case HSerial2:
	//     while((Serial2.available() < size) & (Time_Counter < TIME_OUT)){
    //     		Time_Counter++;
    //     		delayMicroseconds(1000);
	// 	}
        	
	// 	while (Serial2.available() > 0){
	// 		byte inchar = (byte)Serial2.read();
	// 		if ( (inchar == 0xFF) & ((byte)Serial2.peek() == 0xFF) ){
	// 				beginsave=1;
	// 				i=0; 					
	// 		}
	// 		if (beginsave==1 && i<size) {
	// 			   dataEx[i] = inchar;
	// 			   i++;
	// 		}
	// 	}
	// 	break;

	// case HSerial3:
	// 	while((Serial3.available() < size) & (Time_Counter < TIME_OUT)){
	// 		Time_Counter++;
	// 		delayMicroseconds(1000);
	// 	}
		
	// 	while (Serial3.available() > 0){
	// 		byte inchar = (byte)Serial3.read();
	// 		if ( (inchar == 0xFF) & ((byte)Serial3.peek() == 0xFF) ){
	// 				beginsave=1;
	// 				i=0; 
	// 		}
	// 		if (beginsave==1 && i<size) {
	// 			   dataEx[i] = inchar;
	// 			   i++;
	// 		}
	// 	}
	// 	break;
	// #endif
	// }
	return i;
}
